# evolution

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: adapters.md  architecture.md  cli.md  configuration.md  writing-a-task.md
docs/superpowers/plans/: 2026-03-19-evolution-implementation.md  2026-03-19-memory-prerequisites.md
docs/superpowers/specs/: 2026-03-18-evolution-platform-design.md  2026-03-19-memory-evolution-design.md  2026-03-21-evolution-prompts-design.md
evolution/adapters/: base.py  claude_code.py  codex.py  opencode.py
evolution/cli/: init.py  main.py  report.py  run.py
evolution/grader/: hybrid.py  jury.py  llm.py  protocol.py  ranking.py  script.py
evolution/hub/: attempts.py  hypotheses.py  notes.py  skills.py
evolution/manager/: config.py  eval_queue.py  heartbeat.py  manager.py  runtime.py  server.py
evolution/superagent/: agent.py  commands.py
evolution/workspace/: discovery.py  reflink.py  setup.py
skills/: evolution-agent.md
tasks/erdos_overlap/: grader.py  task.yaml
tasks/erdos_overlap/seed/: solver.py
tasks/kernel_engineering/: grader.py  task.yaml
tasks/kernel_engineering/seed/: kernel.py
tasks/openvaccine/: grader.py  task.yaml
tests/: test_adapters.py  test_adapters_extra.py  test_benchmarks.py  test_cli.py  test_config.py  test_discovery.py  test_eval_queue.py  test_grader.py  test_grader_jury.py  test_grader_llm.py  test_hub.py  test_hypotheses.py  test_init.py  test_manager.py  test_ranking.py  test_reflink.py  test_report.py  test_server.py  test_superagent.py  test_workspace.py
(+1 files in other folders)
